--- a/.github/workflows/ci-unit-tests.yml
+++ b/.github/workflows/ci-unit-tests.yml
@@ -1,3 +1,5 @@
+name: "Unit test"
+
 on:
   push:
     branches: [ master ]
@@ -6,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Unit Test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -17,3 +20,10 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Upload coverage to codecov
+    uses: codecov/codecov-action@v1
+    with:
+      file: cover.out
+      fail_ci_if_error: true
+      verbose: true
