--- a/.github/workflows/ci-unit-tests.yml
+++ b/.github/workflows/ci-unit-tests.yml
@@ -19,8 +19,7 @@ jobs:
         go-version: ^1.15
 
     - name: Execute test
-      run: |
-      sh ./.github/scripts/testCov.sh
+      run: sh ./.github/scripts/testCov.sh
 
     - name: Upload coverage to codecov
       uses: codecov/codecov-action@v1
